--- a/src/App.css
+++ b/src/App.css
@@ -118,6 +118,41 @@ h1,h2,h3,h4,p {
 	width: 100%;
 }
 
+/*-----  FrontPageDesign - StyleAMH ------*/
+#FlypJournal div.StyleAMH {
+	font-family:Open Sans;
+}
+
+#FlypJournal .FrontPageStream > .FrontPageStreamItems > div.StyleAMH > .Message > .FrontPageLayout {
+	background: #b53559;
+	background: linear-gradient(to bottom,  #b53559 0%,#901b3f 100%); 
+}
+#FlypJournal .FrontPageStream > .FrontPageStreamItems > div.StyleAMH > .Message > .FrontPageLayout > h2 {	
+	color:#fff;
+	font-weight: normal;
+	padding:15% 8%;	
+	width:100%; 
+	box-sizing:border-box;
+	background: linear-gradient(to bottom,  rgba(64,12,29,1) 0%,rgba(91,19,45,1) 40%,rgba(113,24,59,0.45) 73%,rgba(113,24,59,0) 100%);
+
+	/* 
+	margin: 10%;
+	margin-top: 40px;
+	transform:rotate(-10deg);
+
+ */
+}
+#FlypJournal .FrontPageStream > .FrontPageStreamItems > div.StyleAMH > .Message > .FrontPageLayout  > p {
+	background: #71183b;
+	background: linear-gradient(to bottom,  #71183b 0%,#400c1d 100%);
+	background: linear-gradient(to top,  rgba(64,12,29,1) 0%,rgba(91,19,45,1) 40%,rgba(113,24,59,0.45) 73%,rgba(113,24,59,0) 100%);
+	bottom: 0;
+	color:#fff;
+	width: 100%;
+	box-sizing:border-box;
+	padding:8%;
+}
+
 
 
 
@@ -334,7 +369,6 @@ h1,h2,h3,h4,p {
 	padding:5%;
 	line-height: 1.1em;
 	hyphens: auto;	
-	
 }
 #FlypJournal .Style1 .ArticleStream > div > .Message > div > p {
 	margin-bottom: 4%;
@@ -374,12 +408,25 @@ h1,h2,h3,h4,p {
 	margin-bottom: 4%;
 }
 
-	
-
-
-
-
-
+/*-----  ArticleStream - StyleAMH------*/
+#FlypJournal .StyleAMH .ArticleStream > div > .Message > .SocialMessageLayout {
+	font-size: 0.8em;
+}
+#FlypJournal .StyleAMH .ArticleStream > div > .Message > .SocialMessageLayout > .FlypUser{
+	font-size: 0.75em;
+	line-height: 0.7em;
+}
+#FlypJournal .StyleAMH .ArticleStream > div > .Message > .SocialMessageLayout > .FlypUser > span.UserImage > a  {
+	line-height: 5.9em;
+}
+#FlypJournal .StyleAMH .ArticleStream > div > .Message > .SocialMessageLayout > .FlypUser > .UserImage > a > img {
+	width: 2.8em;
+	margin-right: 0.5em;
+	border-radius: 0.2em;
+}
+#FlypJournal .StyleAMH .ArticleStream > div > .Message > .SocialMessageLayout > .FlypUser > span > a {
+	color:#da1f5e;
+}
 .JosefinSlab {
 	font-family: 'Josefin Slab', serif;
 }
