Video gefixt (Höhe ist ein Hack)

--- a/src/App.css
+++ b/src/App.css
@@ -357,6 +357,8 @@ h1,h2,h3,h4,p {
 #FlypJournal .ArticleStream > div > .Message > .ArticleVideoLayout > .FlypVideo {
 	margin-bottom: 20px;
 	position: relative;
+	height: 55vw;
+	width:100%;
 }
 #FlypJournal .ArticleStream > div > .Message > div > .FlypVideo > .FlypImage {
 	height: 100%;
