--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-html, body {height:100%; width:100vw;background-color:black; overflow:hidden}
+html, body {height:100%; width:100vw;background-color:black; position:fixed;overflow:hidden}
 
 body {
   margin: 0;
